practice 1
>>> print('Hello, World!')
Hello, World!
>>> print('What is your name?')
What is your name?
>>> myName = input('Shani')
Shani
>>> print('It is good to meet you, ' + myName)
It is good to meet you,
>>> print('It is good to meet you, ' + myName)
It is good to meet you,
>>> myName = input()
print('It is nice to meet you' + myName)
>>> myName = 'Shani'
>>> print('Its nice to meet you' + 'myName')
Its nice to meet youmyName
>>> print('Its nice to meet you' + myName)
Its nice to meet youShani
>>> print('Its nice to meet you' ++ myName)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: bad operand type for unary +: 'str'
>>> print('Its nice to meet you, ' + myName)
Its nice to meet you, Shani
>>> print('The length of your name is: ')
The length of your name is:
>>> print(len(myName))
5
>>> print('What is your age?')
What is your age?
>>> myAge = 18
>>> print('You will be ' + str(int(myAge) + 1 ' in a year.')
  File "<stdin>", line 1
    print('You will be ' + str(int(myAge) + 1 ' in a year.')
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
>>> print('You will be ' + ((myAge) + 1) + ' in a year.')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: can only concatenate str (not "int") to str
>>> print('You will be ' + str(int(myAge) + 1) + ' in a year')
You will be 19 in a year
